k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - weather-app.nawnest.my.id
    secretName: weather-app-tls
  rules:
  - host: weather-app.nawnest.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-frontend-service
            port:
              number: 80
